--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    background: url(https://user-images.githubusercontent.com/95699000/177569307-fa77cb74-9d1c-4a19-ba4b-466198aefc88.png);
+    background: linear-gradient(#000, #3B072A, #620041);
     font-family: "Optima";
 }
 
